--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,12 @@
             <version>1.1.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.34</version> <!-- Replace with the latest version if needed -->
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
