--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,19 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/seguimiento_prospectos
 spring.datasource.username=postgres
 spring.datasource.password=123456
 #spring.jpa.hibernate.ddl-auto=update
+# Habilitar el log de SQL
+# Mostrar las consultas SQL generadas por Hibernate
 spring.jpa.show-sql=true
+
+# Formatear el SQL generado
+spring.jpa.properties.hibernate.format_sql=true
+
+# Habilitar logs para mostrar los valores de parámetros
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.hibernate.orm.jdbc.bind=TRACE
+
+# Logs para consultas realizadas a través de JDBC (opcional, pero útil)
+logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
+logging.level.org.springframework.jdbc.core.StatementCreatorUtils=TRACE
 
