--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,5 @@ logging.level.org.hibernate.orm.jdbc.bind=TRACE
 # Logs para consultas realizadas a través de JDBC (opcional, pero útil)
 logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
 logging.level.org.springframework.jdbc.core.StatementCreatorUtils=TRACE
+logging.level.root=INFO
 
