--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,13 @@
         </dependency>
 
         <dependency>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
@@ -102,6 +109,11 @@
             <artifactId>lombok</artifactId>
             <version>1.18.34</version> <!-- Replace with the latest version if needed -->
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>5.3.30</version>
         </dependency>
     </dependencies>
 
