--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,12 +10,12 @@ spring.jpa.show-sql=true
 # Formatear el SQL generado
 spring.jpa.properties.hibernate.format_sql=true
 
-# Habilitar logs para mostrar los valores de parámetros
+# Habilitar logs para mostrar los valores de parametros
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.org.hibernate.orm.jdbc.bind=TRACE
 
-# Logs para consultas realizadas a través de JDBC (opcional, pero útil)
+# Logs para consultas realizadas a traves de JDBC (opcional, pero util)
 logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
 logging.level.org.springframework.jdbc.core.StatementCreatorUtils=TRACE
 logging.level.root=INFO
